Added info on segmented fault geometry

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <a name="capabilities-of-the-codes" class="anchor" href="#capabilities-of-the-codes"><span class="octicon octicon-link"></span></a>Capabilities of the codes:</h4>
 
 <ul>
-<li>Inversion of provided data for a given fault geometry</li>
+<li>Inversion of provided data for a given (possibly segmented) fault geometry</li>
 <li>Resolution analysis by means of synthetic tests with prescribed target rupture model or slip-rate pulse model</li>
 <li>Inversion in-depth analysis by means of spectral analysis of the forward matrix <strong>G</strong>
 </li>
