--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/fgallovic/LinSlipInv">View on GitHub</a>
 
           <h1 id="project_title">Linslipinv</h1>
-          <h2 id="project_tagline">Linear multi time-window earthquake slip inversion with k^-2 smoothing</h2>
+          <h2 id="project_tagline">Linear multi time-window earthquake slip inversion with <em>k</em><sup>-2</sup> smoothing</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/fgallovic/LinSlipInv/zipball/master">Download this project as a .zip file</a>
@@ -36,7 +36,7 @@
 
 <hr>
 
-<p>Linear multi time-window earthquake slip inversion with <em>k</em>^-2 smoothing</p>
+<p>Linear multi time-window earthquake slip inversion with <em>k</em><sup>-2</sup> smoothing</p>
 
 <p>Suite of codes for linear slip inversions and resolution analysis.</p>
 
@@ -65,7 +65,7 @@
 
 <ul>
 <li>Truncated SVD</li>
-<li>Spatial <em>k</em>^-2 prior covariance function</li>
+<li>Spatial <em>k</em><sup>-2</sup> prior covariance function</li>
 </ul>
 
 <h4>
