--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <ul>
 <li>Truncated SVD</li>
 <li>Spatial <em>k</em>^<sup1>-2</sup1> prior covariance function</li>
+<li>Positivity constraint on the slip rate functions</li>
 </ul>
 
 <h4>
